--- a/worksheets1.ipynb
+++ b/worksheets1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpMprYkkhQPhG7jXL6vhKE",
+      "authorship_tag": "ABX9TyMiCw9MQq49GyfTjWIY8wR6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -382,6 +382,137 @@
           },
           "metadata": {},
           "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "var = True\n",
+        "type(var)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BznZdUw1D6lB",
+        "outputId": "1b7110ad-b045-4a03-cea8-7e1cb1c0e6a1"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "10 > 9"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ErViwt2QECzs",
+        "outputId": "fe95404b-08e4-4189-9697-26d89b10f76a"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "float(11)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-KJktZEVFYP_",
+        "outputId": "02d58fac-9a74-4fed-f520-7d058fbfc299"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "float('11')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5vE7_Q7UFc1s",
+        "outputId": "8287fcd9-9059-46ab-80b6-c8e44ac66a32"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "int(111.8999)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TsdexvvWFgRc",
+        "outputId": "770f7982-53e0-4ee0-c625-1759ea03abed"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "111"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
         }
       ]
     }
