--- a/worksheets1.ipynb
+++ b/worksheets1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiCw9MQq49GyfTjWIY8wR6",
+      "authorship_tag": "ABX9TyNLSh4QB0M69UkID94ay+7H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -513,6 +513,86 @@
           },
           "metadata": {},
           "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 7\n",
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T7aGoZWDHM9H",
+        "outputId": "c4c825d9-f6cc-4b90-f4d0-a6ab0b59b9ee"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"x =\", x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GQ_ryJbaHQx_",
+        "outputId": "0cdf0a29-7e0b-4b50-e18d-95506d83449f"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x = 7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 7\n",
+        "y = 9\n",
+        "x\n",
+        "y\n",
+        "print(\"x =\", x,end='\\n\\n')\n",
+        "print(\"y =\", y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OsvWmc6HJMLX",
+        "outputId": "f8dc68aa-2f1c-4ce2-e43e-9dc08eb29194"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x = 7\n",
+            "\n",
+            "y = 9\n"
+          ]
         }
       ]
     }
