--- a/worksheets1.ipynb
+++ b/worksheets1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLSh4QB0M69UkID94ay+7H",
+      "authorship_tag": "ABX9TyP+nxEzE7YtNCvMdUOLTb5o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -574,16 +574,17 @@
         "x\n",
         "y\n",
         "print(\"x =\", x,end='\\n\\n')\n",
-        "print(\"y =\", y)"
+        "print(\"y =\", y)\n",
+        "print(\"x\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OsvWmc6HJMLX",
-        "outputId": "f8dc68aa-2f1c-4ce2-e43e-9dc08eb29194"
+        "outputId": "954d53a8-5f1e-441d-c98c-1a62f7ff8282"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -591,10 +592,382 @@
           "text": [
             "x = 7\n",
             "\n",
-            "y = 9\n"
+            "y = 9\n",
+            "x\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age = int(input(\"please enter the age: \"))\n",
+        "print (age)\n",
+        "type(age)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FtXvxXKxNQrU",
+        "outputId": "bbe21f0c-4cf8-4aab-9b17-5d3a69873e8b"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "please enter the age: 33\n",
+            "33\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = input(\"Please enter the name: \")\n",
+        "print(name)\n",
+        "type(name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qwnmp1l_NfOh",
+        "outputId": "3ccae011-04eb-4566-de3a-19fe038c0568"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please enter the name: nimi\n",
+            "nimi\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 12\n",
+        "b = 2\n",
+        "\n",
+        "print (\"a + b\",a+b)\n",
+        "print (\"a - b\",a-b)\n",
+        "print (\"a * b\",a*b)\n",
+        "print (\"a / b\",a/b)\n",
+        "print (\"a % b\",a%b)\n",
+        "print (\"a ** b\", a**b)\n",
+        "print (\"a // b\", a//b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZReY4GijPWNi",
+        "outputId": "72ae5aff-a5f6-47dd-cb07-846755dd8e51"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a + b 14\n",
+            "a - b 10\n",
+            "a * b 24\n",
+            "a / b 6.0\n",
+            "a % b 0\n",
+            "a ** b 144\n",
+            "a // b 6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 10\n",
+        "b = 20\n",
+        "print (\"a > b is\", a > b)\n",
+        "print (\"a < b is \",a < b)\n",
+        "print (\"a == b is\", a==b)\n",
+        "print (\"a != b is \", a!=b)\n",
+        "print(\"a >= b is\", a>=b)\n",
+        "print(\"a<=b is \", a<=b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IiephiyNSz-P",
+        "outputId": "36f2b350-9fb2-420b-bde4-4cd8f5da31be"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a > b is False\n",
+            "a < b is  True\n",
+            "a == b is False\n",
+            "a != b is  True\n",
+            "a >= b is False\n",
+            "a<=b is  True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "iUY8VJHQSz6n"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "27/2==13.5"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e0ohZ0TyUKCO",
+        "outputId": "b264e19a-bcac-470e-db99-e4f9d60bf923"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 5\n",
+        "x +=5\n",
+        "print(\"x +=5\",x)\n",
+        "x -=2\n",
+        "print(\"x -=2\",x)\n",
+        "x *=5\n",
+        "print(\"x *=5\",x)\n",
+        "x /=5\n",
+        "print(\"x /=5\",x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nPIhUvopPVZK",
+        "outputId": "4c858171-434c-4682-e093-6331b89bcc4f"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x +=5 10\n",
+            "x -=2 8\n",
+            "x *=5 40\n",
+            "x /=5 8.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 11\n",
+        "a = x>10 and x<20\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xf_gCpj4YF1C",
+        "outputId": "3b41d999-ea45-4250-b537-bac26d95d68b"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 11\n",
+        "a = x > 10 and x == 12\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jwJLv8_SYQs3",
+        "outputId": "5e2b5a3a-29fe-4e20-e6c2-13ba1cce6a41"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 11\n",
+        "a = x > 10 or x == 12\n",
+        "print (a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4okNeg9AYa85",
+        "outputId": "b75c3c4c-4362-4391-ccfe-be50aaa9db3a"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 11\n",
+        "a = x > 12 or x <10\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KasC7eBdYll_",
+        "outputId": "376b992e-f0b7-491a-aeb5-cd483d106645"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "3==2 and 1!=2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_nhFRNtlZUoS",
+        "outputId": "65a41847-8dd9-4e33-c995-dc905d4d2789"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "3%2 > 1 and 4/2 ==2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GAXqDdeGZfI9",
+        "outputId": "8d8429c6-a687-48e1-b86e-214110b08383"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Z5B0e2GPYauG"
+      }
     }
   ]
 }
